# otus

./: .editorconfig  .gitignore  AdapterGenerator.h  CMakeLists.txt  ChangeVelocityCommand.h  ClearScopeCommand.cpp  CommandException.h  CreateScopeCommand.cpp  CustomException.h  Defs.h  ExceptionHandler.cpp  ExceptionHandler.h  FailedCommand.h  ICommand.h  IFuelable.h  IMovable.h  IRotatable.h  IoC.h  IoCHelper.h  MovableObject.h  Move.h  MoveCommand.h  Problems.txt  RegisterCommand.cpp  RegisterCommand.h  RetryCommand.h  RotatableObject.h  Rotate.h  RotateAndChangeVelocityCommand.h  RotateCommand.h  SetCurrentScopeCommand.cpp  SetCurrentScopeCommand.h  SetLocationCommand.h  TestMovableAdapter.h  UObject.h  main.cpp
.github/workflows/: c-cpp.yml
include/: AuthRequest.h  AuthService.h  Defs.h  FuelableObject.h  GameInfo.h  GameMessage.h  GameQueueRepositoryImpl.h  HttpEndpoint.h  ICollisionDetector.h  ICollisionDetectorImpl.h  IFuelable.h  IGameQueueRepository.h  IMovable.h  IQueue.h  IQueueImpl.h  IRotatable.h  IState.h  IoC.h  JWTUtils.h  MovableObject.h  MoveToState.h  MultiNeighborhoodCollisionSystem.h  NeighborhoodSystem.h  NormalState.h  RotatableObject.h  ServerThread.h  TestDependencies.h  TestMovableAdapter.h  TestRotatableAdapter.h  ThreadSafeQueue.h  UObject.h
include/commands/: BurnFuelCommand.h  ChangeVelocityCommand.h  CheckFuelCommand.h  ClearScopeCommand.h  CollisionCheckCommand.h  CollisionDetectionCommand.h  CreateScopeCommand.h  DoubleRetryCommand.h  FinishCommand.h  HardStopCommand.h  InterpretCommand.h  LogCommand.h  MacroCommand.h  MoveCommand.h  MoveToCommand.h  QueuePushCommand.h  RotateAndChangeVelocityCommand.h  RotateCommand.h  RunCommand.h  SetAngleCommand.h  SoftStopCommand.h  StartCommand.h  TestCommand.h
src/: AuthRequest.cpp  AuthService.cpp  ExceptionHandler.cpp  GameInfo.cpp  GameMessage.cpp  HttpEndpoint.cpp  IoC.cpp  JWTUtils.cpp  MoveToState.cpp  MultiNeighborhoodCollisionSystem.cpp  NeighborhoodSystem.cpp  NormalState.cpp  ServerThread.cpp  TestDependencies.cpp  main.cpp
